 * Bug in @wipe fixed by Padraic.
 * Objects couldn't be @tel'd to exits which weren't in their current
   location. Reported by Padraic.
 * Fixed an obscure bug in "say" when sound is propagated. From a report by
   Padraic@M*U*S*H. [MG]
 * Various help fixes. [MG]
 * Prevent persistant 'Attempt to write to error log before it was started!'
   error in netmush.log [MG]

Functions:
 * Restrictions for the beep() function can now be modified with @function.
   Suggested by Paige. [MG]
 * Functions that take #lambda anonymous attributes also understand a new
   #apply/<function name> shorthand for calling a single function. [SW]
 * ldelete() now takes an osep. [MG]
 * allof()/strallof() can now have mutli-char output separators, and null
   oseps. Reported by Padraic. [MG]
 * benchmark() warns when results are thrown off by hitting the
   FIL. Reported by Padraic. [SW]

Version 1.8.4 patchlevel 4                                 May 05,  2011

Major changes:
 * Q-registers are no longer limited to single characters. setq(name,joe)
   and r(name) or %q<name>! Limited by max_named_qregs. [GM]
 * Ident lookup and associated config options have been removed. Between
   lack of people running ident servers, NAT, and issues in the code, it
   rarely got results. [SW].

Hardcode:
 * global_eval_context has been removed. The BQUE, EVAL_CONTEXT and PE_Info
   structs have been removed, replaced with MQUE and NEW_PE_INFO. Shouldn't
   affect players, but will affect hardcode hacks. See HACKING.184 for more
   info. [MG]
 * Q-registers are now kept in a PE_REGS stack. See HACKING.184 for more
   information. This will be used for other registers. [GM]
 * Regexp information ($1, $<foo>) are now kept in the PE_REGS stack. [GM]
 * Faster regexps in many cases when there is no markup. [GM]
 * Switch, iter, and env (%0-%9) information are now kept in PE_REGS stack.
   switch, iter, @switch and @dol are no longer limited, but new queue