@@ -29,6 +29,9 @@ Commands:
    {curly braces}) in the rhs arg of @force/noeval. [MG]
  * @ps/debug <pid> will display extra information about a queue entry's
    evaluation environment. [SW]
+ * @pemit now acts as if /silent was given when the executor and target
+   are the same object, for consistency with other sound-producing commands
+   and to fix an issue with @pemit/spoof. [SW]
 
 Powers:
  * can_dark power lets non-wizard players set themselves dark. Suggested by 
@@ -73,6 +76,7 @@ Fixes:
  * Various help fixes. [MG]
  * Prevent persistant 'Attempt to write to error log before it was started!'
    error in netmush.log [MG]
+ * Rooms could not locate objects by name. Reported by Sketch. [MG]
 
 Functions:
  * Restrictions for the beep() function can now be modified with @function.
@@ -82,6 +86,8 @@ Functions:
  * ldelete() now takes an osep. [MG]
  * allof()/strallof() can now have mutli-char output separators, and null
    oseps. Reported by Padraic. [MG]
+ * benchmark() warns when results are thrown off by hitting the
+   FIL. Reported by Padraic. [SW]
 
 & 1.8.4p4
 Version 1.8.4 patchlevel 4                                 May 05,  2011
