@@ -419,10 +419,10 @@ match_result_internal(dbref who, dbref where, const char *xname, int type,
 
   while (1) {
     if (goodwhere
-        && ((flags & MAT_POSSESSION) || (flags & MAT_REMOTE_CONTENTS))) {
+        && ((flags & (MAT_POSSESSION | MAT_REMOTE_CONTENTS)))) {
       MATCH_LIST(Contents(where));
     }
-    if (GoodObject(loc) && (flags & MAT_NEIGHBOR) && !(flags & MAT_CONTENTS)) {
+    if (GoodObject(loc) && (flags & MAT_NEIGHBOR) && !(flags & MAT_CONTENTS) && loc != where) {
       MATCH_LIST(Contents(loc));
     }
     if ((type & TYPE_EXIT) || !(flags & MAT_TYPE)) {
